Release 3.2.1
=============

Bugs fixed
----------

- The wrapper for the R package `dbplyr` could not import the underlying
  package (refactoring elsewhere was not propagated there).


Release 3.2.0
=============

New features
------------

- rpy2 can built and used with :mod:`cffi`'s ABI or API modes (releases 3.0.x and
  3.1.x were using the ABI mode exclusively). At the time of writing the default
  is still the ABI mode but the choice can be controlled through the environment variable
  `RPY2_CFFI_MODE`. If set, possible values are `ABI` (default if the environment
  variable is not set), `API`, or `BOTH`. When the latter, both `API` and `ABI`
  modes are built, and the choice of which one to use can be made at run time.

Changes
-------

- The "consoleread" callback (reading input to the R console) is now assuming UTF-8
  (was previously assuming ASCII) and is no longer trying to add a "new line" character
  at the end of the input.

- Querying an R environment with an invalid key will generate a :class:`TypeError`
  or a :class:`ValueError` depending on the issue (rather than always :class:`ValueError`
  before.

Bugs fixed
----------

- `setup.py` is now again compatible with Python2 (issue #580).

- Unit tests were failing if numpy is not installed.

- :mod:`rpy2.situation` is no longer breaking when R is not the in path and
  there is no environment variable `R_HOME`.

- Build script for the cffi interface is now using the environment
  variable `R_HOME` whenever defined (rather that always infer it from the
  R in the PATH).

- Converting R strings back to Python was incorrectly using `Latin1` while `UTF-8` was
  intended (issue #537).


Release 3.1.0
============

New features
------------

- Python matrix multiplication (`__matmul__` / `@`) added to
  R :class:`Matrix` objects.

- An :class:`threading.RLock` is added to :mod:`rpy2.rinterface_lib.openrlib` and is
  used by the context manager :func:`rpy2.rinterface_lib.memorymanagement.rmemory`